@@ -2,12 +2,14 @@ package ru.corpmarket.authservice.security;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.SignatureAlgorithm;
 import io.jsonwebtoken.security.Keys;
 
 
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.context.annotation.Bean;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -16,19 +18,21 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.stereotype.Component;
+import org.springframework.web.context.request.RequestContextListener;
 import ru.corpmarket.authservice.model.UserCredentials;
 import ru.corpmarket.authservice.service.UserService;
 
 import javax.servlet.FilterChain;
+import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.Date;
+import java.util.stream.Collectors;
 
 @Slf4j
-@Component
 public class JwtUsernameAndPasswordAuthenticationFilter extends UsernamePasswordAuthenticationFilter {
 
     private final AuthenticationManager authenticationManager;
@@ -44,37 +48,37 @@ public class JwtUsernameAndPasswordAuthenticationFilter extends UsernamePassword
         this.setRequiresAuthenticationRequestMatcher(new AntPathRequestMatcher(jwtConfig.getAuthUri(), "POST"));
     }
 
-    @Autowired
-    @Qualifier("authenticationManager")
     @Override
-    public Authentication attemptAuthentication(HttpServletRequest request, HttpServletResponse response) throws AuthenticationException{
+    public Authentication attemptAuthentication(HttpServletRequest request, HttpServletResponse response) throws AuthenticationException {
         try {
             UserCredentials userCredentials = new ObjectMapper().readValue(request.getInputStream(), UserCredentials.class);
+            log.info(userCredentials.toString());
             userService.setUserCredentials(userCredentials);
             UsernamePasswordAuthenticationToken usernamePasswordAuthenticationToken = new UsernamePasswordAuthenticationToken(
                     userCredentials.getEmail(), userCredentials.getPassword(), Collections.emptyList());
-            log.debug("usernamePasswordAuthenticationToken: {}", usernamePasswordAuthenticationToken);
+            log.info("usernamePasswordAuthenticationToken: {}", usernamePasswordAuthenticationToken);
             return authenticationManager.authenticate(usernamePasswordAuthenticationToken);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
-
     @Override
-    protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain, Authentication authResult) {
+    protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain,
+                                            Authentication authResult) throws IOException, ServletException {
         Date now = new Date();
+        log.info("succes");
         String token = Jwts.builder()
-                .subject(authResult.getName())
+                .setSubject(authResult.getName())
                 .claim("authorities", authResult.getAuthorities()
                         .stream()
                         .map(GrantedAuthority::getAuthority)
-                        .toList())
-                .issuedAt(now)
-                .expiration(new Date(now.getTime() + jwtConfig.getExpirationMilliseconds() * 1000))
-                .signWith(Keys.hmacShaKeyFor(jwtConfig.getSecret().getBytes(StandardCharsets.UTF_8)),Jwts.SIG.HS512)
+                        .collect(Collectors.toList()))
+                .setIssuedAt(now)
+                .setExpiration(new Date(now.getTime() + jwtConfig.getExpirationMilliseconds() * 1000))
+                .signWith(SignatureAlgorithm.HS512, jwtConfig.getSecret().getBytes())
                 .compact();
-        log.debug("token: {}", token);
+        log.info("token: {}", token);
         response.addHeader(jwtConfig.getHeader(), jwtConfig.getPrefix() + token);
     }
 }
